@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.3.16
 
+  *) mod_usertrack: Use random value instead of remote IP address.
+     [Stefan Fritsch]
 
 Changes with Apache 2.3.15
 
